# scholar-summary

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  user.env.example
data/: 20241216.articles.json  articles.json  old_articles.json
src/: config.py  main.py  summarize_existing.py
src/data_store/: db_handler.py
src/email_client/: email_fetcher.py  email_parser.py
src/enrichment/: crossref.py
src/renderer/: report_generator.py
src/summarizer/: prompt_builder.py  summarizer.py
src/utils/: logger.py
