[project]
name = "scholar_summarizer"
version = "0.1.0"
description = "Google Scholar alert summarizer"
authors = [{name = "Avery Krieger"}]
dependencies = [
    "openai==0.27.0",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "python-dotenv==1.0.0",
    "pytest==7.4.0",
    "black==23.7.0",
    "isort==5.12.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"